# mm-agent-chatbot

./: ._.gitattributes  ._frontend  .gitignore  CLAUDE.md  GEMINI.md  README.md  docker-compose.yml  pnpm-lock.yaml
backend/: .gitignore  Dockerfile  GEMINI.md  local.db  pyproject.toml
backend/src/backend/: alembic.ini  database.py  main.py  models.py
backend/src/backend/alembic/: env.py
backend/src/backend/alembic/versions/: 4d68f81c56d3_add_is_indexed_to_file_model.py  66319831d10a_init.py  ba14df5726c7_init.py  bd327574c659_add_chat_session_and_messages.py  c585dc5f54c7_change_default.py
backend/src/backend/routers/: auth.py  chat.py  file.py  users.py  ws.py
backend/src/backend/routes/: auth.py  file.py  users.py
frontend/: .dockerignore  .gitignore  CLAUDE.md  Dockerfile  GEMINI.md  package.json  pnpm-lock.yaml
frontend/src/: types.ts
frontend/src/app/: layout.tsx
frontend/src/app/(app)/: layout.tsx
frontend/src/app/(app)/chat/: page.tsx
frontend/src/app/(app)/files/: page.tsx
frontend/src/app/api/auth/login/: route.ts
frontend/src/app/api/auth/logout/: route.ts
frontend/src/app/api/auth/register/: route.ts
frontend/src/app/api/users/me/: route.ts
frontend/src/contexts/: auth-context.tsx
frontend/src/lib/: api-utilis.ts
