[project]
name = "backend"
version = "0.1.0"
description = ""
authors = [
    {name = "Justin-Qian",email = "yjqian19@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "fastapi[standard]>=0.115.12,<0.116.0",
    "sqlalchemy>=2.0.41,<3.0.0",
    "pyjwt>=2.10.1,<3.0.0",
    "passlib[bcrypt]>=1.7.4,<2.0.0",
    "bcrypt>=4.0.1,<5.0.0",
    "psycopg2-binary>=2.9.10,<3.0.0",
    "alembic>=1.16.2,<2.0.0",
    "openai>=1.93.0,<2.0.0",
    "pymupdf>=1.26.3,<2.0.0",
    "chromadb>=1.0.15,<2.0.0",
    "openai-agents>=0.2.2,<0.3.0",
]

[project.optional-dependencies]
dev = [
    "black>=25.1.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
